// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`differentialExpressionReducer Sets error state on error action 1`] = `
Object {
  "comparison": Object {
    "group": Object {
      "between": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
      "within": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
    },
    "type": "within",
  },
  "properties": Object {
    "cellSets": Object {},
    "comparisonType": null,
    "data": Array [],
    "error": "asd",
    "loading": false,
    "total": 0,
  },
}
`;

exports[`differentialExpressionReducer Sets loaded state on loaded action 1`] = `
Object {
  "comparison": Object {
    "group": Object {
      "between": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
      "within": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
    },
    "type": "within",
  },
  "properties": Object {
    "cellSets": Object {
      "first": "louvain-0",
      "second": "louvain-1",
    },
    "comparisonType": undefined,
    "data": Array [
      Object {
        "logFC": 3.45,
        "gene_names": "A",
        "p_val": 1.16,
        "p_val_adj": 2.16,
      },
      Object {
        "logFC": 4.45,
        "gene_names": "B",
        "p_val": 2.16,
        "p_val_adj": 3.16,
      },
      Object {
        "logFC": 5.45,
        "gene_names": "C",
        "p_val": 3.16,
        "p_val_adj": 4.16,
      },
      Object {
        "logFC": 6.45,
        "gene_names": "D",
        "p_val": 4.16,
        "p_val_adj": 5.16,
      },
      Object {
        "logFC": 7.45,
        "gene_names": "E",
        "p_val": 5.16,
        "p_val_adj": 6.16,
      },
      Object {
        "logFC": 8.45,
        "gene_names": "F",
        "p_val": 6.16,
        "p_val_adj": 7.16,
      },
    ],
    "error": false,
    "loading": false,
    "total": 6,
  },
}
`;

exports[`differentialExpressionReducer Sets loading state on loading action 1`] = `
Object {
  "comparison": Object {
    "group": Object {
      "between": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
      "within": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
    },
    "type": "within",
  },
  "properties": Object {
    "cellSets": Object {},
    "comparisonType": null,
    "data": Array [],
    "error": false,
    "loading": true,
    "total": 0,
  },
}
`;
